--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     background-image: url("pokemon.jpg");
     background-size: cover;
-    font-family: 'Helvetica Neue', Ubuntu, Oxygen, Roboto,'Segoe UI' BlinkMacSystemFont-apple-system,  'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: font-family: "Pixelify Sans", sans-serif;
     font-weight: bold;
     color: white;
     text-align: center;
